2006-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (Fforward_comment): Revert the reversion.
	(back_comment, scan_lists): Also use EMACS_INT for buffer positions.

2006-07-09  John Paul Wallington  <jpw@pobox.com>

	* syntax.c (Fforward_comment): Revert previous change.

2006-07-09  Kim F. Storm  <storm@cua.dk>

	* window.c (Fforce_window_update): Doc fix.

2006-07-08  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* fileio.c (do_auto_save_make_dir): Make the auto-save-list-file
	directory unreadable for better user privacy.

2006-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (Fforward_comment): Fix int-32 vs EMACS_INT-64 mixup.

	* lread.c (read_filtered_event): Remove `register' qualifier because it
	causes compilation problem with gcc-4.0.2-20051125 on amd64.
	(readevalloop): Remove unused var `bpos'.
	Yet another int/Lisp_Object mixup (YAILOM).

2006-07-07  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (Fexecute_extended_command): Mention the argument
	PREFIXARG in the doc string.

2006-07-07  Kim F. Storm  <storm@cua.dk>

	* fringe.c (Fdefine_fringe_bitmap): Doc fix.

2006-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* insdel.c (prepare_to_modify_buffer): For an indirect buffer, do
	clash detection using the base buffer.

	* puresize.h (BASE_PURESIZE): Increment to 1210500.

2006-07-04  Kim F. Storm  <storm@cua.dk>

	* xterm.c (x_delete_display): Don't free or derefence NULL pointers.

2006-07-04  Kenichi Handa  <handa@m17n.org>

	* fontset.c (Fset_overriding_fontspec_internal): Check if we need
	to update Voverriding_fontspec_alist.

2006-07-03  Richard Stallman  <rms@gnu.org>

	* xfns.c (Fx_create_frame): Move unwind_create_frame setup down.

	* xfaces.c (Fface_attribute_relative_p): Doc fix.

	* textprop.c (Fget_char_property_and_overlay): Doc fix.

	* eval.c (Fdefvaralias): Doc fix.

2006-07-03  Kim F. Storm  <storm@cua.dk>

	* dispnew.c (sit_for): Fix preempt condition.
